--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,21 @@
       <artifactId>jdbc-socket-factory-core</artifactId>
       <version>1.0.15</version>
     </dependency>
+<dependency>
+    <groupId>com.github.jnr</groupId>
+    <artifactId>jnr-unixsocket</artifactId>
+    <version>0.28</version>
+</dependency>
+<dependency>
+    <groupId>com.google.http-client</groupId>
+    <artifactId>google-http-client-jackson</artifactId>
+    <version>1.15.0-rc</version>
+</dependency>
+<dependency>
+    <groupId>com.google.oauth-client</groupId>
+    <artifactId>google-oauth-client-java6</artifactId>
+    <version>1.15.0-rc</version>
+</dependency>
   </dependencies>
 
   <profiles>
