--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -79,6 +79,16 @@
       <artifactId>postgres-socket-factory</artifactId>
       <version>1.0.15</version>
   </dependency>
+  <dependency>
+    <groupId>com.sparkjava</groupId>
+    <artifactId>spark-core</artifactId>
+    <version>2.5.4</version>
+</dependency>
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.0</version>
+</dependency>
   </dependencies>
 
   <build>
