--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -89,6 +89,12 @@
     <artifactId>gson</artifactId>
     <version>2.8.0</version>
 </dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.0.1</version>
+    <scope>provided</scope>
+</dependency>
   </dependencies>
 
   <build>
