--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -95,6 +95,11 @@
     <version>2.5</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>com.heroku.sdk</groupId>
+    <artifactId>heroku-maven-plugin</artifactId>
+    <version>3.0.4</version>
+</dependency>
   </dependencies>
 
   <build>
