--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
     <groupId>com.example</groupId>
     <version>1.0-SNAPSHOT</version>
     <artifactId>FallingKnives</artifactId>
+    <properties>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+</properties>
     <build>
         <plugins>
             <plugin>
